# SurviveTheTalk

./: .gitignore  CLAUDE.md  README.md
server/: CLAUDE.md  config.py  main.py  pyproject.toml
server/api/: app.py  call_endpoint.py  middleware.py  responses.py  routes_auth.py  routes_calls.py  routes_debriefs.py  routes_health.py  routes_legal.py  routes_scenarios.py  routes_subscription.py  routes_subscription_webhooks.py  routes_user.py  usage.py
server/auth/: email_service.py  jwt_service.py
server/billing/: __init__.py  apple_roots.py  apple_validator.py  google_validator.py  models.py  revalidation.py
server/db/: database.py  janitor.py  queries.py  seed_scenarios.py
server/models/: schemas.py
server/pipeline/: bot.py  bot_pool.py  cartesia_instrumented.py  checkpoint_manager.py  debrief_assembly.py  debrief_generator.py  debrief_teardown.py  device_hesitation_collector.py  dtln_audio_filter.py  emotion_emitter.py  endpoint_watchdog.py  environment_monitor.py  exchange_classifier.py  exit_line_generator.py  hesitation_observer.py  input_gate.py  latency_probe.py  livekit_tokens.py  llm_provider.py  llm_warmup.py  patience_tracker.py  prompts.py  reply_sanitizer.py  scenarios.py  transcript_logger.py  tts_factory.py  tts_warmup.py  tts_watchdog.py  viseme_emitter.py
server/scripts/: benchmark_classifier.py  build.cmd  build_scenario.py  calibrate.cmd  calibrate_scenario.py  calibration_engine.py  compare_difficulty.py  new-scenario.cmd  new_scenario.py  probe_debrief_schema.py  refresh_prod_snapshot.py  scenario_builder.py  score_transcript.py  (+2 more)
(+505 files in other folders)
